# Market-Intelligence

./: .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  assistx_brief.md  main.py  mandiri_brief.md  mandiri_cleaned.md  output.md  pt_indosat_brief.md  pyproject.toml  requirements.txt  sisindokom_brief.md  sisindokom_cleaned.md  telkomsel_brief.md  telkomsel_cleaned.md  test.py  test_claude.py  test_download.py  test_download_playright.py  test_idx.py  test_idx_playright.py  test_linkedin.py  test_parser.py  test_profile.py  test_resolver.py  test_service.py
backend/downloads/: FinancialStatement-2026-I-AADI.xlsx  FinancialStatement-2026-I-AALI.xlsx  FinancialStatement-2026-I-AKSI.xlsx  FinancialStatement-2026-I-BBCA.xlsx  FinancialStatement-2026-I-BMRI.xlsx  FinancialStatement-2026-I-GOTO.xlsx  FinancialStatement-2026-I-ISAT.xlsx  FinancialStatement-2026-I-TLKM.xlsx
backend/schemas/: company_schema.py
backend/src/capability_detection/: anthropic_capability_detector.py  capability_library.py  detector.py  fallback_detector.py  gemini_capability_detector.py  models.py  openai_capability_detector.py
backend/src/company_resolution/: candidate_extractor.py  mock_resolver.py  models.py  resolver.py  selector.py  service.py  tavily_resolver.py
backend/src/crawler/: crawl4ai_crawler.py  crawler.py  important_link_selector.py  link_extractor.py  markdown_cleaner.py  models.py  multi_page_crawler.py
backend/src/fact_extraction/: anthropic_extractor.py  extractor.py  fallback_detector.py  (+4 more)
(+24 files in other folders)
